# RedBase

./: ADVANCED_USAGE.md  CONTRIBUTING.md  Cargo.toml  README.md  USAGE.md
docs/: CLIENT_FEATURES.md  README.md  REST_INTERFACE.md  basic_usage.md  usage_guide.txt
src/: aggregation.rs  api.rs  async_api.rs  batch.rs  filter.rs  lib.rs  main.rs  memstore.rs  pool.rs  rest.rs  storage.rs
tests/: api_tests.rs  async_api_tests.rs  client_features_tests.rs  filter_aggregation_tests.rs
