[package]
name = "RedBase"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4.41"
tokio = { version = "1.36.0", features = ["full"] }
crossbeam = "0.8.4"
rand = "0.8.5"
log = "0.4.20"
thiserror = "1.0.56"

[dev-dependencies]
tempfile = "3.10.1"
