[package]
name = "RedBase"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4.41"
tokio = { version = "1.36.0", features = ["full"] }
crossbeam = "0.8.4"
rand = "0.8.5"
log = "0.4.20"
thiserror = "1.0.56"
regex = "1.10.2"
actix-web = "4.4.0"
actix-rt = "2.9.0"
deadpool = "0.9.5"
futures = "0.3.28"
serde_json = "1.0.107"
async-trait = "0.1.77"

[dev-dependencies]
tempfile = "3.10.1"
